More fixes to explosions